# Versper-Grid

./: .gitignore  LICENSE  README.md  last_min_plans.md  master_upgrade.md  package-lock.json  package.json
.agents/skills/claude-design/: SKILL.md
AMD/: .env.example
AMD/apps/api/src/vespergrid/: __init__.py  sensor_analysis.py
AMD/apps/console/src/: domain.ts
AMD/demo/sector4/: audit_log_sample.json  evidence_pack.json  operator_transcript_src_txt_7781.txt  simulation_replay_sample.json
AMD/infra/: vespergrid-frames.service
AMD/infra/amd/: deployment_plan.md
AMD/ros2/evidence_bridge/evidence_bridge/: gas_leak_publisher.py
AMD/ros2/lng_terminal_world/models/flare_smoke/: model.config  model.sdf
AMD/ros2/lng_terminal_world/models/gas_haze/: model.sdf
AMD/ros2/lng_terminal_world/models/gas_plume/: model.sdf
AMD/ros2/lng_terminal_world/models/wind_streaks/: model.config  model.sdf
AMD/scripts/: bootstrap_amd_cloud.sh  build_hf_space.py  gen_frames.py  vesper_e2e.py
apps/api/: requirements.txt
apps/api/src/vespergrid/: broadcast.py  engine.py  ingest.py  local_vlm.py  main.py  memory.py  models.py  sensor_analysis.py  stt.py  vlm_client.py
apps/console/: index.html  package.json  vite.config.ts
apps/console/public/audio/: 2347-Sector4.aac
apps/console/src/: App.tsx  domain.ts  styles.css
apps/console/src/data/: sector4.json
demo/sector4/: vlm_output_sample.json
demo/sector4/audio/: 2451-sector5.aac  voice_manifest.json
docs/: asset_research_selection.md  execution_roadmap.md  master_idea.md  strategy_decision.md  synthetic_asset_plan.md
infra/: nginx-vespergrid.conf  vespergrid-api.service  vespergrid-vllm.service
ros2/: UBUNTU_RUNBOOK.md
ros2/evidence_bridge/: package.xml  setup.py
ros2/evidence_bridge/evidence_bridge/: bridge_node.py
ros2/lng_terminal_world/: CMakeLists.txt  package.xml
ros2/lng_terminal_world/launch/: lng_terminal.launch.py
ros2/lng_terminal_world/models/ambient_dust/: model.config  model.sdf
ros2/lng_terminal_world/models/gas_drift/: model.config  model.sdf
ros2/lng_terminal_world/models/gas_plume/: model.config
ros2/lng_terminal_world/models/snowfall/: model.config  model.sdf
ros2/lng_terminal_world/plugins/: DroneAnimator.cc
ros2/lng_terminal_world/scripts/: drone_animator.py  frame_sampler.py
ros2/lng_terminal_world/worlds/: lng_terminal.sdf
ros2_temp/: UBUNTU_RUNBOOK.md
ros2_temp/evidence_bridge/evidence_bridge/: bridge_node.py
ros2_temp/evidence_bridge/launch/: bridge.launch.py
ros2_temp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_temp/install/evidence_bridge/share/evidence_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_temp/install/lng_terminal_world/lib/lng_terminal_world/: frame_sampler.py
ros2_temp/lng_terminal_world/: CMakeLists.txt  package.xml
ros2_temp/lng_terminal_world/launch/: lng_terminal.launch.py
ros2_temp/lng_terminal_world/models/gas_haze/: model.config  model.sdf
ros2_temp/lng_terminal_world/models/gas_plume/: model.sdf
ros2_temp/lng_terminal_world/plugins/: DroneAnimator.cc
ros2_temp/lng_terminal_world/worlds/: lng_terminal.sdf  lng_terminal.world
ros2_temp/log/: latest_build
scripts/: _extract_pdf.py  _render_pdf.py  _smoketest_api.py  capture_hero.mjs  droplet_setup.sh  gen_frames.py  generate_assets.py  generate_deck.py  vesper_e2e.py
(+20 files in other folders)
