<?xml version="1.0"?>
<package format="3">
  <name>lng_terminal_world</name>
  <version>0.1.0</version>
  <description>LNG terminal Gazebo world for VesperGrid incident simulation</description>
  <maintainer email="dev@vespergrid.local">VesperGrid</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ignition-cmake2</buildtool_depend>
  <build_depend>libignition-plugin-dev</build_depend>
  <build_depend>libignition-gazebo6-dev</build_depend>
  <build_depend>libignition-math6-dev</build_depend>
  <build_depend>libignition-common4-dev</build_depend>
  <exec_depend>libignition-gazebo6</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
